--- a/TestTableParser.ipynb
+++ b/TestTableParser.ipynb
@@ -2,39 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "820ec043-807c-4ae5-bde8-fb061b09692b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import TableParser\n",
     "import SimpleTableParser\n",
+    "import TestTableParser\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9f37dc20-05fd-4851-9881-6bbc4f8cd442",
    "metadata": {},
    "outputs": [],
    "source": [
-    "simpleTableParser = SimpleTableParser.SimpleTableParser()"
+    "simpleTableParser = SimpleTableParser.SimpleTableParser()\n",
+    "testTableParser =  TestTableParser.TestTableParser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "04ce269f-f0b4-43ae-816e-4f514908f219",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableParser = TableParser.TableParser(simpleTableParser)"
+    "tableParser = TableParser.TableParser(testTableParser)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "7fe81cf2-48c9-4b51-a055-d54a6753972c",
    "metadata": {},
    "outputs": [
@@ -43,22 +45,23 @@
       "text/plain": [
        "0    09-01-2021\n",
        "1    07-02-2021\n",
+       "2    07-02-2O21\n",
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "series = pd.Series([\"09-01-2021\",\"07-02-2021\"])\n",
+    "series = pd.Series([\"09-01-2021\",\"07-02-2021\",\"07-02-2O21\"])\n",
     "series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8f371e6a-a6b5-42f8-b6bb-f89a1c641f97",
    "metadata": {},
    "outputs": [
@@ -67,11 +70,12 @@
       "text/plain": [
        "[0   2021-09-01\n",
        " 1   2021-07-02\n",
+       " 2   2021-07-02\n",
        " dtype: datetime64[ns],\n",
        " []]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
