added new task case

--- a/TestTableParser.ipynb
+++ b/TestTableParser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "820ec043-807c-4ae5-bde8-fb061b09692b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "9f37dc20-05fd-4851-9881-6bbc4f8cd442",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "04ce269f-f0b4-43ae-816e-4f514908f219",
    "metadata": {},
    "outputs": [],
@@ -36,37 +36,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7fe81cf2-48c9-4b51-a055-d54a6753972c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    09 01!2021\n",
-       "1    07-02-2021\n",
-       "2    07.02.2O21\n",
-       "3    O7.02.2O21\n",
-       "4    O7/02/2O21\n",
-       "5    O7@02@2O21\n",
-       "6    O7]02[2O21\n",
-       "7    O7~02|2O21\n",
+       "0     09 01!2021\n",
+       "1    07-Jun-2021\n",
+       "2     07.02.2O21\n",
+       "3    O7 Aug 2O21\n",
+       "4     O7/02/2O21\n",
+       "5     O7@02@2O21\n",
+       "6     O7]02[2O21\n",
+       "7     O7~02|2O21\n",
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "series = pd.Series([\"09 01!2021\", \"07-02-2021\", \"07.02.2O21\", \"O7.02.2O21\",\"O7/02/2O21\",'O7@02@2O21','O7]02[2O21','O7~02|2O21'])\n",
+    "series = pd.Series([\"09 01!2021\", \"07-Jun-2O21\", \"07.02.2O21\", \"O7 Aug 2O21\",\"O7/02/2O21\",'O7@02@2O21','O7]02[2O21','O7~02|2O21'])\n",
     "series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "8f371e6a-a6b5-42f8-b6bb-f89a1c641f97",
    "metadata": {},
    "outputs": [
@@ -74,9 +74,9 @@
      "data": {
       "text/plain": [
        "[0   2021-09-01\n",
-       " 1   2021-07-02\n",
+       " 1   2021-07-06\n",
        " 2   2021-07-02\n",
-       " 3   2021-07-02\n",
+       " 3   2021-07-08\n",
        " 4   2021-07-02\n",
        " 5   2021-07-02\n",
        " 6   2021-07-02\n",
@@ -85,7 +85,7 @@
        " []]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
