--- a/TestTableParser.ipynb
+++ b/TestTableParser.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "04ce269f-f0b4-43ae-816e-4f514908f219",
    "metadata": {},
    "outputs": [],
@@ -36,37 +36,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7fe81cf2-48c9-4b51-a055-d54a6753972c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     09 01!2021\n",
-       "1    07-Jun-2021\n",
-       "2     07.02.2O21\n",
-       "3    O7 Aug 2O21\n",
-       "4     O7/02/2O21\n",
-       "5     O7@02@2O21\n",
-       "6     O7]02[2O21\n",
-       "7     O7~02|2O21\n",
+       "0       09 01!2021\n",
+       "1      07-Jun-2O21\n",
+       "2         20150708\n",
+       "3      O7 Aug 2O21\n",
+       "4       O7/02/2O21\n",
+       "5       O7@02@2O21\n",
+       "6       O7]02[2O21\n",
+       "7       O7~02|2O21\n",
+       "8       31 01 2002\n",
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "series = pd.Series([\"09 01!2021\", \"07-Jun-2O21\", \"07.02.2O21\", \"O7 Aug 2O21\",\"O7/02/2O21\",'O7@02@2O21','O7]02[2O21','O7~02|2O21'])\n",
+    "series = pd.Series([\"09 01!2021\", \"07-Jun-2O21\", \"20150708\", \"O7 Aug 2O21\",\"O7/02/2O21\",'O7@02@2O21','O7]02[2O21','O7~02|2O21','   31 01 2002'])\n",
     "series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "8f371e6a-a6b5-42f8-b6bb-f89a1c641f97",
    "metadata": {},
    "outputs": [
@@ -75,17 +76,18 @@
       "text/plain": [
        "[0   2021-09-01\n",
        " 1   2021-07-06\n",
-       " 2   2021-07-02\n",
+       " 2   2015-07-08\n",
        " 3   2021-07-08\n",
        " 4   2021-07-02\n",
        " 5   2021-07-02\n",
        " 6   2021-07-02\n",
        " 7   2021-07-02\n",
+       " 8   2002-01-31\n",
        " dtype: datetime64[ns],\n",
        " []]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,14 +95,6 @@
    "source": [
     "tableParser.parse(series)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c8a6c81-75a5-46f9-9702-48ee70399cd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
