added index for y axis table

--- a/prototypeOf_parser.ipynb
+++ b/prototypeOf_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "f8d88b48-e110-4611-b729-94a7cc41bd89",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 59,
    "id": "1e765402-a5b8-47a1-9698-4e0718758b3a",
    "metadata": {},
    "outputs": [],
@@ -80,18 +80,23 @@
     "\n",
     "    def all_action(self,df):\n",
     "        data_row_num, data_col_num,main_axis = self.find_coordinate(0,0,df) # <-- find coordinate of dates\n",
+    "        \n",
     "        if main_axis == \"X axis\":\n",
     "            table = df.iloc[data_row_num:, data_col_num:].reset_index(drop=True)  # <--- all useful data\n",
     "            date = df.iloc[data_row_num, data_col_num:]  # <--- Series with date (01.03.2016;...)\n",
     "            date = self.parse(date)\n",
     "            table.iloc[0] = date[0]\n",
     "#             data_row_num,data_col_num = 4,3\n",
+    "\n",
+    "            min_deep = 0\n",
+    "            if data_col_num > 3:min_deep = data_col_num - 3\n",
+    "            elif data_col_num< 3 and data_col_num >1: min_deep = data_col_num -1\n",
     "            list_index =[]\n",
     "            for i in range(data_row_num,df.shape[0]):\n",
     "                buffer = \"\"\n",
     "                if pd.isnull(df.iloc[i,0]) and len(list_index)!= 0:\n",
     "                    buffer = \"upWord_\"\n",
-    "                for j in range(0,data_col_num):\n",
+    "                for j in range(min_deep,data_col_num):\n",
     "                    buffer +=str(df.iloc[i,j]).replace('\\n',' ')+\"__\"\n",
     "                list_index.append(buffer.replace(\"nan__\",\"\")[:-2])\n",
     "                if list_index[-1][:7] == \"upWord_\":\n",
@@ -105,15 +110,30 @@
     "            date = df.iloc[data_row_num:,data_col_num]\n",
     "            date = self.parse(date)\n",
     "            table.iloc[0:,0] = date[0]\n",
-    "\n",
-    "#         table.columns = table.iloc[0] # <--- change column names\n",
-    "#         table = table.iloc[1:, :] # <--- remove first row\n",
+    "        \n",
+    "#             data_row_num,data_col_num = 35,4\n",
+    "            min_height = 0\n",
+    "            if data_row_num > 3:min_height = data_row_num- 3\n",
+    "            elif data_row_num< 3 and data_row_num >1: min_height = data_row_num -1\n",
+    "            list_index =[]\n",
+    "            for i in range(data_col_num,df.shape[1]):\n",
+    "                buffer = \"\"\n",
+    "                if pd.isnull(df.iloc[min_height,i]) and len(list_index)!= 0:\n",
+    "                    buffer = \"upWord_\"\n",
+    "                for j in range(min_height,data_row_num):\n",
+    "                    buffer += str(df.iloc[j,i]).replace('\\n',' ')+ \"__\"\n",
+    "                list_index.append(buffer.replace(\"nan__\",\"\")[:-2])\n",
+    "                if list_index[-1][:7] == \"upWord_\":\n",
+    "                    index = list_index[-2].find(\"_\")\n",
+    "                    list_index[-1] = list_index[-2][:index+2]+list_index[-1][7:]\n",
+    "            list_index = pd.Series(list_index)\n",
+    "            table.columns = list_index            \n",
     "        return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 60,
    "id": "712def9c-1261-4855-94cd-6b8e2e78370b",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1375,7 @@
        "[26 rows x 924 columns]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "id": "7626ead9-de4c-4f16-9420-152402fa2cb4",
    "metadata": {
     "tags": []
@@ -1421,42 +1441,16 @@
     {
      "data": {
       "text/plain": [
-       "0                     Дата на начало периода__nan\n",
-       "1     Наличие кур-несушек на начало периода__гол.\n",
-       "2                                Пало__норм__гол.\n",
-       "3                                Пало__факт__гол.\n",
-       "4                                   Пало__норм__%\n",
-       "5                                   Пало__факт__%\n",
-       "6                                 Расход корма__ц\n",
-       "7                       Количество кормодней__nan\n",
-       "8                 Расход корма на голову__норм__г\n",
-       "9                 Расход корма на голову__факт__г\n",
-       "10          Расход корма на 1000 шт яиц__норм__кг\n",
-       "11          Расход корма на 1000 шт яиц__факт__кг\n",
-       "12       Расход корма на 1 кг яйцемассы__норм__кг\n",
-       "13       Расход корма на 1 кг яйцемассы__факт__кг\n",
-       "14                          Валовый сбор яиц__шт.\n",
-       "15                                  Яйцемасса__кг\n",
-       "16                 Среднемесячное поголовье__гол.\n",
-       "17     Яиц на начальную курицу-несушку__норм__шт.\n",
-       "18     Яиц на начальную курицу-несушку__факт__шт.\n",
-       "19       Яиц на среднюю курицу-несушку__норм__шт.\n",
-       "20       Яиц на среднюю курицу-несушку__факт__шт.\n",
-       "21                          Яйценоскость__норм__%\n",
-       "22                          Яйценоскость__факт__%\n",
-       "23                    Средний вес 1-ой головы__кг\n",
-       "24                            Однородность %__nan\n",
-       "25                       Средний вес 1-го яйца__г\n",
-       "dtype: object"
+       "(959, 30)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "df.shape\n"
    ]
   },
   {
@@ -1476,51 +1470,37 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pd.isnull(df.iloc[3,1])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "49295de6-9fc2-4f9f-a60f-31a9ea5d2991",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Наличие кур-несушек\\nна начало периода'"
+       "'01.03.2016'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[5,0]"
+    "data_row_num,data_col_num = 35,4\n",
+    "df.iloc[35,4]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "8d5c57b6-a10c-42b8-aa8c-6e763416537b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Дата на начало периода\n",
-      "nan\n",
-      "nan\n"
-     ]
-    }
-   ],
-   "source": [
-    "for j in range(0,data_col_num):\n",
-    "    print(str(df.iloc[4,j]))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1540,8 +1520,6 @@
     }
    ],
    "source": [
-    "# for i in range(data_row_num,df.shape[0]):\n",
-    "#     print(df.iloc[i,0])\n",
     "df.iloc[5,0].replace('\\n','')"
    ]
   },
